# qt_simple_project

./: CMakeLists.txt
